--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <p id="hello">hello</p>
+<button id="btn">변경</button>
 
 <script>
-  document.getElementById("hello").innerHTML = "hi";
+  document.getElementById("btn").addEventListener("click", function () {
+    document.getElementById("hello").innerHTML = "hi";
+  });
+  console.log(this);
 </script>
